# pkg/api/service/transaction.go
@@ -9,6 +9,7 @@ import (
 	"github.com/eddie023/wex-tag/ent"
 	"github.com/eddie023/wex-tag/pkg/apiout"
 	"github.com/eddie023/wex-tag/pkg/types"
+	"github.com/google/uuid"
 	"github.com/shopspring/decimal"
 )
 
@@ -17,7 +18,7 @@ type Service struct {
 }
 
 // CreatePurchase will store the request payload into database and return a new purchase transaction.
-func (s *Service) CreateNewPurchase(ctx context.Context, payload types.CreateNewPurchaseTransaction) (types.Transaction, error) {
+func (s *Service) CreateNewPurchaseTransaction(ctx context.Context, payload types.CreateNewPurchaseTransaction) (types.Transaction, error) {
 	slog.Info("creating new purchase transaction", "amount", payload.Amount)
 
 	amount, err := decimal.NewFromString(payload.Amount)
@@ -31,7 +32,8 @@ func (s *Service) CreateNewPurchase(ctx context.Context, payload types.CreateNew
 		return types.Transaction{}, apiout.BadRequest("amount cannot be negative number")
 	}
 
-	transaction, err := s.Ent.Transaction.Create().SetAmountInUsd(RoundToNearestCent(amount)).SetDate(time.Now().UTC()).SetDescription(payload.Description).Save(ctx)
+	roundedAmount := RoundToNearestCent(amount)
+	transaction, err := s.Ent.Transaction.Create().SetAmountInUsd(roundedAmount).SetDate(time.Now().UTC()).SetDescription(payload.Description).Save(ctx)
 	if err != nil {
 		return types.Transaction{}, err
 	}
@@ -39,11 +41,15 @@ func (s *Service) CreateNewPurchase(ctx context.Context, payload types.CreateNew
 	slog.Info("successfully processed new purchase transaction", "transaction_id", transaction.ID)
 
 	return types.Transaction{
-		AmountInUSD: fmt.Sprintf("%.2f", transaction.AmountInUsd.InexactFloat64()),
+		AmountInUSD: fmt.Sprintf("%.2f", roundedAmount.InexactFloat64()),
 		Date:        transaction.Date,
 		Description: transaction.Description,
 		Id:          transaction.ID.String(),
 	}, nil
+}
+
+func ParseStringToUUID(s string) (uuid.UUID, error) {
+	return uuid.Parse(s)
 }
 
 // RoundToNearestCent will round the given decimal number to nearest cent.
